Edited some changes

--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>Hello!</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">
-
-    <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
+    <title>Kyle Welch</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<h1>Hi there!</h1>
+<div class="wrapper">
 
-<p>
-    I'm your cool new webpage. Made with <a href="https://glitch.com">Glitch</a>!
-</p>
+    <div class="left">
+        <img class="profile-picture" src="me.jpg" width="200"/>
+        <h1 class="name">Kyle Welch</h1>
+        <h4 class="subtitle">CS Student @ SUNY Albany</h4>
+    </div>
 
-<!-- include the Glitch button to show what the webpage is about and
-      to make it easier for folks to view source and remix -->
-<div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
-<script src="https://button.glitch.me/button.js"></script>
+    <div class="right">
+        <p class="bio">
+            Computer Science student, web developer, blah blah blah.
+            Thanks for visiting my website.
+        </p>
+        <ul class="social-links">
+            <li><a href="https://github.com/kywelch17" class = "github">Github</a></li>
+            <li><a href="https:/linkedin.com/in/kywelch17" class = "linkedin">Linkedin</a></li>
+            <li><a href="https://twitter.com/kylwelc" class = "twitter">Twitter</a></li>
+        </ul>
+    </div>
+
+</div>
 </body>
 </html>
